use env instead of hardcoding config/database.yml
test in visual studio or with `PATH_TO_DB_FILE="./testdata/config/database.yml" go test ./...`

--- a/cmd/gent/testdata/config/database.yml
+++ b/cmd/gent/testdata/config/database.yml
@@ -1,8 +1,8 @@
-development:
-  dialect: postgres
-  database: jarvis_test
-  user: ola
-  password: '' 
-  host: localhost 
-  port: 5432
-  pool: 5 # ¯\_(ツ)_/¯ 
+dialect: postgres
+database: jarvis_test
+user: ola
+password: '' 
+host: localhost 
+port: 5432
+pool: 5 # ¯\_(ツ)_/¯ 
+sslmode: disable
