first models test
generated some code but it's not quite working to use the generated code so switched to some manual.
generated configs still needed for db and other changes

--- a/ent/testdata/config/database.yml
+++ b/ent/testdata/config/database.yml
@@ -1,6 +1,6 @@
 # copied from gent. todo handle this generically
 dialect: postgres
-database: jarvis_test
+database: ent_test
 user: ola
 password: '' 
 host: localhost 
