--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "go.testEnvVars": { "PATH_TO_DB_FILE": "./testdata/config/database.yml"} 
+  "go.testEnvVars": { "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable"} 
 }
