--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "go.testEnvVars": { "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable"} 
+  "go.testEnvVars": {
+    "PATH_TO_DB_FILE": "testdata/config/database.yml",
+    "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable",
+  } 
 }
