--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
   "go.testEnvVars": {
     "PATH_TO_DB_FILE": "testdata/config/database.yml",
     "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable",
-  } 
+  } ,
+  // use this to find bad tests quickly.
+  "go.testTimeout": "15s",
 }
