--- a/internal/test_schema/graphql/gqlgen.yml
+++ b/internal/test_schema/graphql/gqlgen.yml
@@ -7,6 +7,8 @@ model:
 models:
     Contact:
         model: github.com/lolopinto/ent/internal/test_schema/models.Contact
+    ContactEmail:
+        model: github.com/lolopinto/ent/internal/test_schema/models.ContactEmail
     Event:
         model: github.com/lolopinto/ent/internal/test_schema/models.Event
     User:
