remove cmd/gent/testdata which should no longer be needed now that db and graphql have their own internal packages

--- a/internal/schema/testdata/config/database.yml
+++ b/internal/schema/testdata/config/database.yml
@@ -1,6 +1,5 @@
-# copied from gent. todo handle this generically
 dialect: postgres
-database: jarvis_test
+database: jarvis_test # todo rename this
 user: ola
 password: '' 
 host: localhost 
