change graphql_schema generation to account for custom fields in ents, add them to schema.graphql, change the generated gqlgen.yml to update the config ala https://gqlgen.com/config/
generated.go is updated, nothing needed in resolver.go

--- a/internal/test_schema/graphql/gqlgen.yml
+++ b/internal/test_schema/graphql/gqlgen.yml
@@ -11,6 +11,13 @@ models:
     Contact:
         model:
           - github.com/lolopinto/ent/internal/test_schema/models.Contact
+        fields:
+            contactBar:
+                resolver: false
+                fieldName: GetContactBar
+            contactFoo:
+                resolver: false
+                fieldName: GetContactFoo
     ContactEmail:
         model:
           - github.com/lolopinto/ent/internal/test_schema/models.ContactEmail
@@ -20,3 +27,7 @@ models:
     User:
         model:
           - github.com/lolopinto/ent/internal/test_schema/models.User
+        fields:
+            userFoo:
+                resolver: false
+                fieldName: GetUserFoo
