parse structs in the current package to include in GQL Schema
+ support custom functions from these new types

This allows us to get Viewer into the GraphQL schema

ViewerResolver() is a method that indicates it's to support "viewer" in Query
It returns (*Viewer, error)

We will/should eventually have an init step that produces this file by default with the "User" or "Account" object if it exists and anyone can customize this as needed to suit thier needs

--- a/internal/test_schema/graphql/gqlgen.yml
+++ b/internal/test_schema/graphql/gqlgen.yml
@@ -31,3 +31,10 @@ models:
             userFoo:
                 resolver: false
                 fieldName: GetUserFoo
+    Viewer:
+        model:
+          - github.com/lolopinto/ent/internal/test_schema/graphql.Viewer
+        fields:
+            contact:
+                resolver: false
+                fieldName: LoadViewerContact
