add tests for custom top level functions
because of how complicated it can get based on all the different moving parts, I take the code for a function, run through the entire process of generating the code (and schema.graphql etc) and then check that the generated code from template is as expected

This greatly improves the test coverage for this package

Alas, these tests are SLOOOOOOOOOOOOOOOOOOOOOOW because a lot of code parsing is happening

--- a/internal/test_schema/graphql/gqlgen.yml
+++ b/internal/test_schema/graphql/gqlgen.yml
@@ -24,6 +24,9 @@ models:
     Event:
         model:
           - github.com/lolopinto/ent/internal/test_schema/models.Event
+    Node:
+        model:
+          - github.com/lolopinto/ent/ent.Entity
     User:
         model:
           - github.com/lolopinto/ent/internal/test_schema/models.User
@@ -38,3 +41,10 @@ models:
             contact:
                 resolver: false
                 fieldName: LoadViewerContact
+directives:
+    deprecated:
+        skip_runtime: true
+    include:
+        skip_runtime: true
+    skip:
+        skip_runtime: true
