use new fields + integrate json fields into codegen process
add address model using new fields API to test_schema and see that generated model looks fine

reading from the model (mostly) works
there's an edge case that needs to be fixed

Need more changes to get writing through actions working but writing on its own works (as long as the field is already json.Marshalled) e.g. in testingutils/ent.go

--- a/internal/test_schema/graphql/gqlgen.yml
+++ b/internal/test_schema/graphql/gqlgen.yml
@@ -8,6 +8,9 @@ model:
     package: graphql
 autobind: []
 models:
+    Address:
+        model:
+          - github.com/lolopinto/ent/internal/test_schema/models.Address
     Contact:
         model:
           - github.com/lolopinto/ent/internal/test_schema/models.Contact
