add initViewer option
Run as follows: `gent initViewer -p models/configs --app testschema -n user --force`

Generates a ViewerContext in root/{app_name}viewer with function that goes from viewerID to ViewerContext and loads user
It assumes the privacy logic for the node means a viewer can load themselves and avoids circular dependencies.

This can easily be done with this line as one of the first rules in the privacy policy: `privacy.AllowIfViewerIsOwnerRule{OwnerID: user.ID},`

Will eventually autogenerate that in a global `gent init` step as opposed to assuming that

It also generates a graphql wrapper for it so that we can reference Viewer in GraphQL. And viewer { user -> User }.
deleted existing viewer.go and changed to use new APIs

--- a/internal/test_schema/graphql/gqlgen.yml
+++ b/internal/test_schema/graphql/gqlgen.yml
@@ -44,6 +44,9 @@ models:
             contact:
                 resolver: false
                 fieldName: LoadViewerContact
+            user:
+                resolver: false
+                fieldName: GetUser
 directives:
     deprecated:
         skip_runtime: true
