fix a bunch of stuff
run missing `tsc` transformations

change testRegex so that only `.ts` files are run. there's an issue with the transformation to .js because of local imports so ignoring that for now.

fix some bugs in golang land with tests and other things

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -9,6 +9,6 @@
     "moduleResolution": "node"
 //    "noImplicitAny": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "tests/**/*"],
   "exclude": ["./examples"],
 }
