--- a/ts/examples/simple/tsconfig.json
+++ b/ts/examples/simple/tsconfig.json
@@ -17,6 +17,6 @@
   ]
 }
   },
-  "include": ["./src/**/*"],
-  "exclude": ["node_modules", "tests"],
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["node_modules"],
 }
