--- a/ts/package.json
+++ b/ts/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@types/pg": "^7.14.1",
     "pg": "^7.18.2",
+    "prettier": "^1.19.1",
+    "ts-node": "^8.6.2",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
