--- a/ts/package.json
+++ b/ts/package.json
@@ -7,7 +7,9 @@
     "example": "examples"
   },
   "dependencies": {
+    "@types/js-yaml": "^3.12.2",
     "@types/pg": "^7.14.1",
+    "js-yaml": "^3.13.1",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
     "ts-node": "^8.6.2",
@@ -15,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "@types/node": "^13.9.0",
     "jest": "^25.1.0",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
