make importing ent/code slightly easier
these are temporary/only needed until we push to npm or different package repository

--- a/ts/examples/simple/tsconfig.json
+++ b/ts/examples/simple/tsconfig.json
@@ -10,11 +10,9 @@
     "moduleResolution": "node",
     //    "noImplicitAny": true,
     "paths": {
-      "*": [
-        "*",
-        "schema"
-        //    ""
-      ]
+      // to make importing of ent easier
+      "ent/*": ["../../src/*"],
+      "*": ["*"]
     }
   },
   "include": ["src/**/*", "tests/**/*"],
