generate a base class in ent/generated/{node}_base.ts which can be extended by the user-editable super class
each ent has 2 classes:
1/ NodeBase class which should not be edited
2/ Node class which will be generated once and can be edited and other functionality added there

this makes it so we can have default behavior e.g. privacy is no one can see and then allow the developer to edit the privacy for each ent as needed

--- a/ts/examples/simple/tsconfig.json
+++ b/ts/examples/simple/tsconfig.json
@@ -8,6 +8,7 @@
     "downlevelIteration": true,
     "baseUrl": ".",
     "moduleResolution": "node",
+    "esModuleInterop": true,
     //    "noImplicitAny": true,
     "paths": {
       // to make importing of ent easier
