make some paths better

--- a/ts/examples/simple/tsconfig.json
+++ b/ts/examples/simple/tsconfig.json
@@ -13,6 +13,7 @@
     "paths": {
       // to make importing of ent easier
       "ent/*": ["../../src/*"],
+      "src/*": ["./src/*"],
       "*": ["*"]
     }
   },
