--- a/ts/package.json
+++ b/ts/package.json
@@ -13,6 +13,7 @@
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
     "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
