add ability to load edge for id2

--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "@types/jest-expect-message": "^1.0.1",
     "jest": "^25.1.0",
+    "jest-expect-message": "^1.0.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
