--- a/ts/package.json
+++ b/ts/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@types/jest": "^25.1.4",
+    "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.9.0",
     "jest": "^25.1.0",
+    "jest-expect-message": "^1.0.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
