--- a/ts/package.json
+++ b/ts/package.json
@@ -12,6 +12,7 @@
     "js-yaml": "^3.13.1",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
+    "snake-case": "^3.0.3",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "uuid": "^7.0.2"
