--- a/ts/package.json
+++ b/ts/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/js-yaml": "^3.12.2",
     "@types/pg": "^7.14.1",
+    "graph-data-structure": "^1.12.0",
     "js-yaml": "^3.13.1",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
