--- a/ts/package.json
+++ b/ts/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/js-yaml": "^3.12.2",
     "@types/pg": "^7.14.1",
+    "graph-data-structure": "^1.12.0",
     "js-yaml": "^3.13.1",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
@@ -22,6 +23,7 @@
     "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.9.0",
     "jest": "^25.1.0",
+    "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
