--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -20,6 +20,7 @@
     "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-expect-message": "^1.0.2",
+    "json5": "^2.1.3",
     "ts-jest": "^25.2.1",
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
