--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "compile": "tsc",
     "test": "jest",
-    "build": "./node_modules/.bin/webpack --silent"
+    "build": "./node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +27,9 @@
     "webpack": "^5.0.0-beta.13",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "graphql-yoga": "^1.18.3",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^0.17.6"
+  }
 }
