--- a/ts/package.json
+++ b/ts/package.json
@@ -10,7 +10,9 @@
     "@types/js-yaml": "^3.12.2",
     "@types/pg": "^7.14.1",
     "graph-data-structure": "^1.12.0",
+    "graphql": "^15.0.0",
     "js-yaml": "^3.13.1",
+    "nexus": "^0.20.0",
     "pg": "^7.18.2",
     "pg-native": "^3.0.0",
     "prettier": "^1.19.1",
