giving up on this.
it's too early. i'm not sure i can build on this yet

examples literally changed from one day to the other with the migration to a "framework". i can't figure out how to do a simple use case
framework transition: https://github.com/graphql-nexus/schema/issues/373

may be tied to much to prisma? or too much to deploying quickly without even showing how to test

and I couldn't get this simple case to work

looks like i could have tried to continue with @nexus/schema but just not the right timing

error message from building

     TS2322: Type '(root: {}, args: { name?: string | null | undefined; status?: string | null | undefined; }, ctx: any, info: GraphQLResolveInfo) => User' is not assignable to type 'FieldResolver<"Query", "user">'.
  Type 'User' is not assignable to type '{ emailAddress: string; firstName: string; id: string; lastName: string; } | PromiseLike<{ emailAddress: string; firstName: string; id: string; lastName: string; }> | { emailAddress: MaybePromise<...>; firstName: MaybePromise<...>; id: MaybePromise<...>; lastName: MaybePromise<...>; } | PromiseLike<...>'.
    Type 'User' is not assignable to type '{ emailAddress: MaybePromise<string>; firstName: MaybePromise<string>; id: MaybePromise<string>; lastName: MaybePromise<string>; }'.
      Types of property 'id' are incompatible.
        Type 'ID' is not assignable to type 'MaybePromise<string>'.
          Type 'number' is not assignable to type 'MaybePromise<string>'.

There's https://nexus.js.org/ which is what I started looking at

and then next time i looked at it, it was https://www.nexusjs.org/

they both still exist. seems like lots in flux

--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "compile": "tsc",
     "test": "jest",
-    "build": "./node_modules/.bin/webpack --silent"
+    "build": "./node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +27,7 @@
     "webpack": "^5.0.0-beta.13",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "graphql-yoga": "^1.18.3"
+  }
 }
