--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "compile": "tsc",
     "test": "jest",
-    "build": "./node_modules/.bin/webpack --silent"
+    "build": "./node_modules/.bin/webpack"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +27,10 @@
     "webpack": "^5.0.0-beta.13",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/graphql": "^14.5.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
+    "graphql": "^15.0.0"
+  }
 }
