--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -17,6 +17,7 @@
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
     "copy-webpack-plugin": "^5.1.1",
+    "fs": "0.0.1-security",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-expect-message": "^1.0.2",
@@ -31,6 +32,6 @@
     "@types/graphql": "^14.5.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^15.0.0"
+    "graphql": "^14.6.0"
   }
 }
