--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -20,5 +20,7 @@
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "tspath": "^1.3.7"
+  }
 }
