--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -7,18 +7,23 @@
     "test": "tests"
   },
   "scripts": {
-    "compile": "tsc",
+    "compile": "rm -rf dist && ts-node src/compiler.ts",
     "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
+    "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-expect-message": "^1.0.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/node": "^13.13.4",
+    "json5": "^2.1.3"
+  }
 }
