--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -9,6 +9,8 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "esModuleInterop": true,
+    "experimentalDecorators":true,
+    "emitDecoratorMetadata": true,
     //    "noImplicitAny": true,
     "paths": {
       // TODO to make importing of ent easier
