--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
     "PATH_TO_DB_FILE": "testdata/config/database.yml",
     "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable"
   },
-  "go.testTimeout": "30s"
+  "go.testTimeout": "30s",
+  "prettier.configPath": "ts/.prettierrc"
 }
