--- a/ts/package.json
+++ b/ts/package.json
@@ -13,6 +13,7 @@
     "js-yaml": "^3.13.1",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
+    "reflect-metadata": "^0.1.13",
     "snake-case": "^3.0.3",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
