custom graphql files
run command: `ts-node -r tsconfig-paths/register src/custom_graphql.ts`

--- a/ts/package.json
+++ b/ts/package.json
@@ -20,9 +20,11 @@
     "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.9.0",
+    "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
