--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@types/node": "^13.13.4",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "json5": "^2.1.3"
   }
 }
