--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
+  "go.useLanguageServer": true,
   "go.testEnvVars": {
     "PATH_TO_DB_FILE": "testdata/config/database.yml",
     "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable"
