--- a/ts/package.json
+++ b/ts/package.json
@@ -23,13 +23,17 @@
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
-    "@types/node": "^13.9.0",
     "glob": "^7.1.6",
+    "@types/node": "^13.13.9",
+    "graphql": "^15.0.0",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
+  },
+  "peerDependencies": {
+    "graphql": "^14.6.0"
   },
   "scripts": {
     "compile": "tsc",
