--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -19,6 +19,7 @@
     "@types/supertest": "^2.0.9",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
+    "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
     "supertest": "^4.0.2",
     "ts-jest": "^25.2.1",
