TypeScript decorators to support custom fields (#65)
This is the beginning of the high level work to support custom queries and fields in ents exposed in `GraphQL`.

with the approach taken in https://github.com/lolopinto/ent/pull/63, we need a way to integrate custom fields into the generated graphql schema. 

The approach I'm taking here is to use decorators which are "ignored" at run time and only evaluated during the codegen process to gather information about any custom properties or methods to be integrated into the graphql generation process.

The plan is to then take the information received and then generate graphql accessors/properties for these methods. Future issues I see here is that there doesn't seem to be an obvious way to have access to the imported files/paths etc so if there's external dependencies, we'd need to make sure we import them correctly. Haven't solved that problem yet and may need to end up with complicated ways to solve that e.g. using the TypeScript compiler.

Will deal with that at some point.

Next step is to take the output of this and do the work to integrate with #63

--- a/ts/package.json
+++ b/ts/package.json
@@ -13,15 +13,18 @@
     "js-yaml": "^3.13.1",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
+    "reflect-metadata": "^0.1.13",
     "snake-case": "^3.0.3",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.9.0",
+    "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
