--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,11 @@
     "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable"
   },
   "go.testTimeout": "30s",
-  "prettier.configPath": "ts/.prettierrc"
+  "prettier.configPath": "ts/.prettierrc",
+  // "jest.pathToConfig": "jest.config.js",
+  // // TODO need to figure out how to get vscode intellisense to understand all these paths
+  // "jest.rootPath": "ts",
+  // "jest.autoEnable": true,
+  // "jest.pathToJest": "jest",
+  // "jest.debugMode": true
 }
