--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/glob": "^7.1.1",
-    "@types/jest": "^25.1.4",
+    "@types/jest": "^25.2.3",
     "@types/jest-expect-message": "^1.0.1",
+    "@types/supertest": "^2.0.9",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
+    "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
