--- a/ts/package.json
+++ b/ts/package.json
@@ -10,6 +10,7 @@
     "@types/js-yaml": "^3.12.2",
     "@types/pg": "^7.14.1",
     "graph-data-structure": "^1.12.0",
+    "graphql": "^15.0.0",
     "js-yaml": "^3.13.1",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
@@ -23,8 +24,8 @@
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
-    "@types/node": "^13.9.0",
     "glob": "^7.1.6",
+    "@types/node": "^13.13.9",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
