--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.6",
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.2.3",
     "@types/jest-expect-message": "^1.0.1",
