--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -27,9 +27,15 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@types/express-session": "^1.17.0",
     "@types/node": "^13.13.4",
+    "@types/passport-local": "^1.0.33",
+    "@types/passport-strategy": "^0.2.35",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "json5": "^2.1.3"
+    "express-session": "^1.17.1",
+    "json5": "^2.1.3",
+    "passport-local": "^1.0.0",
+    "passport-strategy": "^1.0.0"
   }
 }
