--- a/ts/package.json
+++ b/ts/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/js-yaml": "^3.12.2",
+    "@types/passport": "^1.0.3",
     "@types/pg": "^7.14.1",
     "bcryptjs": "^2.4.3",
     "email-addresses": "^3.1.0",
@@ -16,6 +17,8 @@
     "graphql": "^15.0.0",
     "js-yaml": "^3.13.1",
     "libphonenumber-js": "^1.7.52",
+    "passport": "^0.4.1",
+    "passport-strategy": "^1.0.0",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
     "reflect-metadata": "^0.1.13",
@@ -29,6 +32,7 @@
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
     "@types/node": "^13.13.9",
+    "@types/passport-strategy": "^0.2.35",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
