--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -17,6 +17,7 @@
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.2.3",
     "@types/jest-expect-message": "^1.0.1",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/supertest": "^2.0.9",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
@@ -29,12 +30,15 @@
   "dependencies": {
     "@types/express-session": "^1.17.0",
     "@types/node": "^13.13.4",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/passport-strategy": "^0.2.35",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.1",
     "json5": "^2.1.3",
+    "jsonwebtoken": "^8.5.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0"
   }
