--- a/ts/package.json
+++ b/ts/package.json
@@ -10,6 +10,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/js-yaml": "^3.12.2",
     "@types/passport": "^1.0.3",
+    "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.1",
     "bcryptjs": "^2.4.3",
     "email-addresses": "^3.1.0",
@@ -18,6 +19,7 @@
     "js-yaml": "^3.13.1",
     "libphonenumber-js": "^1.7.52",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-strategy": "^1.0.0",
     "pg": "^7.18.2",
     "prettier": "^1.19.1",
