--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -19,6 +19,7 @@
     "@types/jest-expect-message": "^1.0.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/supertest": "^2.0.9",
+    "cookie-parser": "^1.4.5",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
