--- a/ts/package.json
+++ b/ts/package.json
@@ -39,6 +39,7 @@
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
+    "json5": "^2.1.3",
     "password-validator": "^5.0.3",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
