--- a/ts/package.json
+++ b/ts/package.json
@@ -33,12 +33,15 @@
     "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
+    "@types/minimist": "^1.2.0",
     "@types/node": "^13.13.9",
     "@types/passport-strategy": "^0.2.35",
     "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-expect-message": "^1.0.2",
+    "json5": "^2.1.3",
+    "minimist": "^1.2.5",
     "password-validator": "^5.0.3",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
