--- a/ts/package.json
+++ b/ts/package.json
@@ -13,6 +13,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.1",
     "bcryptjs": "^2.4.3",
+    "dataloader": "^2.0.0",
     "email-addresses": "^3.1.0",
     "graph-data-structure": "^1.12.0",
     "graphql": "^15.0.0",
