--- a/ts/package.json
+++ b/ts/package.json
@@ -40,6 +40,7 @@
     "glob": "^7.1.6",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
+    "jest-each": "^26.1.0",
     "jest-expect-message": "^1.0.2",
     "json5": "^2.1.3",
     "minimist": "^1.2.5",
