--- a/ts/package.json
+++ b/ts/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@lolopinto/ent",
-  "version": "0.0.1",
+  "version": "0.0.8",
   "description": "ent framework",
-  "main": ".",
+  "main": "index.js",
+  "types": "index.d.ts",
   "directories": {
     "example": "examples"
   },
@@ -22,7 +23,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-strategy": "^1.0.0",
-    "pg": "^8.0.3",
+    "pg": "^7.18.2",
     "prettier": "^1.19.1",
     "reflect-metadata": "^0.1.13",
     "snake-case": "^3.0.3",
@@ -50,7 +51,8 @@
   },
   "scripts": {
     "compile": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "clean": "rm -rf dist"
   },
   "author": "lolopinto",
   "license": "ISC",
@@ -60,5 +62,6 @@
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
-  }
+  },
+  "prepublish": "tsc"
 }
