--- a/ts/package.json
+++ b/ts/package.json
@@ -1,14 +1,10 @@
 {
   "name": "@lolopinto/ent",
-  "version": "0.0.4",
+  "version": "0.0.7",
   "description": "ent framework",
   "main": "index.js",
   "types": "index.d.ts",
-  "files": ["./dist"],
-  "np": {
-    "yarn": false,
-    "contents": "dist"
-  },
+  "type": "module",
   "directories": {
     "example": "examples"
   },
@@ -57,7 +53,9 @@
   "scripts": {
     "compile": "tsc",
     "test": "jest",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepublish": "npm run clean && npm run compile && node dist/SetupPackage.js",
+    "actual-publish": "npm run prepublish && cd dist && npm pack && npm publish"
   },
   "author": "lolopinto",
   "license": "ISC",
