--- a/ts/package.json
+++ b/ts/package.json
@@ -55,7 +55,7 @@
     "test": "jest",
     "clean": "rm -rf dist",
     "prepublish": "npm run clean && npm run compile && node dist/SetupPackage.js",
-    "actual-publish": "npm run prepublish && cd dist && npm publish"
+    "actual-publish": "npm run prepublish && npm publish dist"
   },
   "author": "lolopinto",
   "license": "ISC",
