move everything arround to get the format I want
this ends with the following top-level-imports:

"@lolopinto/ent"
"@lolopinto/ent/schema"
"@lolopinto/ent/graphql" (custom imports)
"@lolopinto/ent/auth" (TODO)
"@lolopinto/ent/action"

and will end up creating packages for phonenumber, email, password soon

--- a/ts/package.json
+++ b/ts/package.json
@@ -4,7 +4,6 @@
   "description": "ent framework",
   "main": "index.js",
   "types": "index.d.ts",
-  "type": "module",
   "directories": {
     "example": "examples"
   },
@@ -54,7 +53,7 @@
     "compile": "tsc",
     "test": "jest",
     "clean": "rm -rf dist",
-    "prepublish": "npm run clean && npm run compile && node dist/SetupPackage.js",
+    "prepublish": "npm run clean && npm run compile && node setupPackage.js",
     "actual-publish": "npm run prepublish && npm publish dist"
   },
   "author": "lolopinto",
