--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -17,6 +17,10 @@
       // TODO to make importing of ent easier
       // "ent/*": ["./"],
       // "*": ["*"]
+//      "src/*": [
+        // TODO use this and change tsc to use compiler++
+//        "./src/*"
+//      ],
     },
     "declaration": true,
   },
