--- a/ts/package.json
+++ b/ts/package.json
@@ -17,19 +17,20 @@
     "dataloader": "^2.0.0",
     "email-addresses": "^3.1.0",
     "graph-data-structure": "^1.12.0",
-    "graphql": "^15.0.0",
     "js-yaml": "^3.13.1",
     "libphonenumber-js": "^1.7.52",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-strategy": "^1.0.0",
-    "pg": "^7.18.2",
+    "pg": "^8.0.3",
     "prettier": "^1.19.1",
-    "reflect-metadata": "^0.1.13",
     "snake-case": "^3.0.3",
-    "ts-node": "^8.6.2",
+    "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "uuid": "^7.0.2"
+  },
+  "peerDependencies": {
+    "graphql": "^15.0.0"
   },
   "devDependencies": {
     "@types/glob": "^7.1.1",
@@ -39,6 +40,7 @@
     "@types/node": "^13.13.9",
     "@types/passport-strategy": "^0.2.35",
     "glob": "^7.1.6",
+    "graphql": "^15.3.0",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-each": "^26.1.0",
@@ -46,6 +48,7 @@
     "json5": "^2.1.3",
     "minimist": "^1.2.5",
     "password-validator": "^5.0.3",
+    "reflect-metadata": "^0.1.13",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
@@ -53,8 +56,8 @@
     "compile": "tsc",
     "test": "jest",
     "clean": "rm -rf dist",
-    "prepublish": "npm run clean && npm run compile && node src/setupPackage.js",
-    "actual-publish": "npm run prepublish && npm publish dist"
+    "prepare": "npm run clean && npm run compile && node src/setupPackage.js",
+    "actual-publish": "npm run prepare && npm publish dist"
   },
   "author": "lolopinto",
   "license": "ISC",
@@ -65,5 +68,8 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "prepublish": "tsc"
+  "prepublish": "tsc",
+  "resolutions": {
+    "graphql": "^0.15.0"
+  }
 }
