--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@lolopinto/ent": "0.0.13",
     "@lolopinto/ent-email": "0.0.1",
+    "@lolopinto/ent-password": "0.0.1",
     "@lolopinto/ent-phonenumber": "0.0.1",
     "@types/express-session": "^1.17.0",
     "@types/node": "^13.13.4",
