checkpoint python changes

--- a/python/Pipfile
+++ b/python/Pipfile
@@ -4,13 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest = "*"
 
 [packages]
 alembic = "*"
 datetime = "*"
 sqlalchemy = "*"
-pprint = "*"
 psycopg2 = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
