--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,9 @@
     "PATH_TO_DB_FILE": "testdata/config/database.yml",
     "DB_CONNECTION_STRING": "postgres://ola:@localhost/ent_test?sslmode=disable"
   },
+  "python.formatting.autopep8Path": "",
   "go.testTimeout": "30s",
-  "prettier.configPath": "ts/.prettierrc",
+  "prettier.configPath": "ts/.prettierrc"
   // "jest.pathToConfig": "jest.config.js",
   // // TODO need to figure out how to get vscode intellisense to understand all these paths
   // "jest.rootPath": "ts",
