--- a/ts/package.json
+++ b/ts/package.json
@@ -37,6 +37,7 @@
     "@types/minimist": "^1.2.0",
     "@types/node": "^13.13.9",
     "@types/passport-strategy": "^0.2.35",
+    "@types/pluralize": "0.0.29",
     "glob": "^7.1.6",
     "graphql": "^15.3.0",
     "jest": "^25.1.0",
@@ -45,6 +46,8 @@
     "jest-expect-message": "^1.0.2",
     "json5": "^2.1.3",
     "minimist": "^1.2.5",
+    "node-sql-parser": "^3.1.0",
+    "pluralize": "^8.0.0",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
   },
