fix dependencies for examples/simple

--- a/ts/examples/simple/package.json
+++ b/ts/examples/simple/package.json
@@ -30,6 +30,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@lolopinto/ent": "0.0.23",
     "@lolopinto/ent-email": "0.0.1",
     "@lolopinto/ent-password": "0.0.2",
     "@lolopinto/ent-phonenumber": "0.0.1",
