working with docker
build:

`docker build --build-arg NPM_TOKEN="..." --tag example-simple  --progress=plain . `

run:
`docker run -p 4000:4000 --name example-simple -d example-simple `

logs:
`docker logs --follow ce15ae2521d76d45d8cbdfe587c85653cb3f73fce4534de6ff815b3222c775c2`

kill:
`docker stop example-simple && docker rm example-simple`

--- a/ts/examples/simple/Dockerfile
+++ b/ts/examples/simple/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:12.18.1
+FROM node:14.15.0
 
 # how do we configure this? we want this to be development/test/production as needed
 ENV NODE_ENV=production
@@ -25,4 +25,4 @@ COPY . .
 
 RUN npm run compile
 
-CMD ["node", "src/graphql/index.ts"]  
+CMD ["node", "dist/graphql/index.js"]  
