--- a/ts/examples/simple/config/database.yml
+++ b/ts/examples/simple/config/database.yml
@@ -3,7 +3,8 @@ dialect: postgres
 database: tsent_test
 user: ola
 password: '' 
-host: localhost 
+# to make docker work
+host: host.docker.internal
 port: 5432
 pool: 5 # ¯\_(ツ)_/¯ 
 sslmode: disable
