--- a/ts/examples/simple/config/database.yml
+++ b/ts/examples/simple/config/database.yml
@@ -4,7 +4,8 @@ database: tsent_test
 user: ola
 password: '' 
 # to make docker work
-host: host.docker.internal
+#host: host.docker.internal
+host: localhost
 port: 5432
 pool: 5 # ¯\_(ツ)_/¯ 
 sslmode: disable
