--- a/ts/package.json
+++ b/ts/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/glob": "^7.1.1",
     "@types/js-yaml": "^3.12.2",
+    "@types/minimist": "^1.2.0",
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/pg": "^7.14.1",
     "dataloader": "^2.0.0",
+    "glob": "^7.1.6",
     "graph-data-structure": "^1.12.0",
     "js-yaml": "^3.13.1",
+    "minimist": "^1.2.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-strategy": "^1.0.0",
@@ -25,31 +29,27 @@
     "snake-case": "^3.0.3",
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.8.3",
     "uuid": "^7.0.2"
   },
   "peerDependencies": {
     "graphql": "^15.3.0"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1",
     "@types/jest": "^25.1.4",
     "@types/jest-expect-message": "^1.0.1",
-    "@types/minimist": "^1.2.0",
     "@types/node": "^13.13.9",
     "@types/passport-strategy": "^0.2.35",
     "@types/pluralize": "0.0.29",
-    "glob": "^7.1.6",
     "graphql": "^15.3.0",
     "jest": "^25.1.0",
     "jest-date-mock": "^1.0.8",
     "jest-each": "^26.1.0",
     "jest-expect-message": "^1.0.2",
     "json5": "^2.1.3",
-    "minimist": "^1.2.5",
     "node-sql-parser": "^3.1.0",
     "pluralize": "^8.0.0",
-    "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3"
+    "ts-jest": "^25.2.1"
   },
   "scripts": {
     "compile": "tsc",
